Wed May  7 00:58:18 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* s-parint.ads: Added a new function which mimics the procedure
	  Register_Receiving_Stub to accomodate the changes to be made in
	  GNAT stubs.

	* s-parint.adb: Ditto.

Tue May  6 18:26:10 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* s-garsta.adb: Renum phases.

	* s-garlic.ads: Added comments about additional phases.

	* s-garsta.adb: Removed useless with and elaborate_all clauses.

Mon May  5 21:32:28 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* s-garter.ads: Elaborate body as soon as possible because of the
	  possible use of the protected type from outside.

Sat May  3 16:14:27 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* Makefile.in: Added split to CLEANFILES.

	* split.adb: Use System.IO rather than Ada.Text_IO to avoid
	  problems with Ada.Text_IO depending on s-stratt.adb.

Fri May  2 16:40:02 1997  Samuel Tardieu <sam@inf.enst.fr>

	* Makefile.am: Use the split utility

	* constants.sh: Ditto.

	* split.adb: New utility to configure GLADE.

	* s-garpri.ads: Made a pure package.

Fri May  2 16:39:23 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* Makefile.am (install-data-local): Changed sed into $(SED)

Fri May  2 16:37:16 1997  Daniel Neri  <d92-dne@nada.kth.se>

	* constants.sh: Allow for very long ``uname -a'' lines which cause
 	GNAT's style checks to barf on s-garcon.ads. The uname output is
 	now wrapped with ``fmt'' (which hopefully is present on all
 	important Unices).

>>>>>>> 1.102
Wed Apr 30 15:32:43 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* s-garpri.ads: Added background creation priority.

	* s-rpcpoo.adb: Added task pool. Low-priority background
	  pre-allocation, reuse of tasks and destruction are implemented.

	* s-rpc.adb: Enclose two potentially blocking operations with
	  pragma Warnings to avoid warning.

	* s-rpcpoo.ads: New routine Allocate_Task to enforce the pool
	  abstraction.

	* s-rpc.adb: Splitted System.RPC into 3 packages (System.RPC,